2025-07-13  Karl Berry  <karl@freefriends.org>

	* lib.h (kpse_cnf_p): declare new fn.
	* cnf.c (kpse_cnf_p): define it.
	* pathsearch.c,
	* tex-file.c: change calls from KPSE_CNF_P macro to this new fn,
	to avoid multiple evaluations of the argument and hence useless
	multiple debugging lines.

2025-07-13  Karl Berry  <karl@freefriends.org>

	* elt-dirs.c (do_subdir) [ST_NLINK_TRICK]: if new cnf variable
	kpse_ignore_nlink_for_leaf is true, never mind the st_nlink=2
	trick for checking if we're in a leaf directory. Useful because
	overlay filesystems can lie about st_nlink:
	  https://tug.org/pipermail/texhax/2025-July/026771.html
	And also when an apparent leaf directory contains symlinks to
	other directories:
	  https://tex.stackexchange.com/questions/132908
	[KPSE_DEBUG]: add and tweak debugging output.
	* NEWS: mention this.
	* doc/kpathsea.texi (Subdirectory expansion, Unable to find files):
	mention new workaround of setting kpse_ignore_nlink_for_leaf=1.
	* texmf.cnf (kpse_ignore_nlink_for_leaf): commented-out setting.
	* tests/cnfnlink.test: new test.
	* Makefile.am (TESTS): add it.

2025-05-04  Karl Berry  <karl@freefriends.org>

	* expand.c (kpathsea_expand_kpse_dot): doc fix.

2025-04-18  Karl Berry  <karl@freefriends.org>

	* c-ctype.h (kpse_isascii): new macro, since isascii() can
	apparently longer be used portably, thanks to POSIX and gcc 15.
	(ISALNUM, ..., ISBLANK): use it. Discussion:
	https://tug.org/pipermail/tlbuild/2025q2/005743.html

2025-04-08  Karl Berry  <karl@freefriends.org>

	* c-memstr.h (strtok, strstr): remove () fallback declarations,
	since C23 considers that the same as (void). Apparently
	HAVE_STRING_H was not defined, either.
	Report from Hilmar, 3 Apr 2025 23:54:54.

2025-03-08  Karl Berry  <karl@tug.org>

	* version.ac: 6.4.2/dev.

2025-03-07  Karl Berry  <karl@tug.org>

	* TL'25 release.

2025-02-12  Karl Berry  <karl@freefriends.org>

	* texmf.cnf (shell_escape_commands): doc link to